; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/common/extr_uengine.c_ixp2000_uengine_init_context.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/common/extr_uengine.c_ixp2000_uengine_init_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CSR_CTX_POINTER = common dso_local global i32 0, align 4
@INDIRECT_CTX_SIG_EVENTS = common dso_local global i32 0, align 4
@INDIRECT_CTX_WAKEUP_EVENTS = common dso_local global i32 0, align 4
@INDIRECT_CTX_STS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ixp2000_uengine_init_context(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @CSR_CTX_POINTER, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @ixp2000_uengine_csr_write(i32 %7, i32 %8, i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @INDIRECT_CTX_SIG_EVENTS, align 4
  %13 = call i32 @ixp2000_uengine_csr_write(i32 %11, i32 %12, i32 1)
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @INDIRECT_CTX_WAKEUP_EVENTS, align 4
  %16 = call i32 @ixp2000_uengine_csr_write(i32 %14, i32 %15, i32 1)
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @INDIRECT_CTX_STS, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @ixp2000_uengine_csr_write(i32 %17, i32 %18, i32 %19)
  ret void
}

declare dso_local i32 @ixp2000_uengine_csr_write(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
